[gd_scene load_steps=10 format=3 uid="uid://8b1r3i26bgog"]

[ext_resource type="Texture2D" uid="uid://dkm1oehueyxep" path="res://resources/sprites/file.png" id="1_8260m"]
[ext_resource type="Texture2D" uid="uid://h41su6ua5f8v" path="res://resources/sprites/file_selected.png" id="2_fyqcd"]
[ext_resource type="Script" path="res://resources/scenes/source_link/scripts/source_code_link.gd" id="3_8s2dh"]
[ext_resource type="FontFile" uid="uid://crc4df8q4f8i6" path="res://resources/fonts/Vipervibes.ttf" id="5_p2i0l"]
[ext_resource type="AudioStream" uid="uid://cgus8vr1klb3n" path="res://resources/audio/open.sfxr" id="6_8s88s"]
[ext_resource type="Texture2D" uid="uid://cncg8skxqmtxo" path="res://resources/sprites/chain-link-symbolic.png" id="6_t5by5"]
[ext_resource type="AudioStream" uid="uid://cn8sj2ajke2r6" path="res://resources/audio/close.wav" id="8_i3lby"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0knqs"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
anti_aliasing = false

[sub_resource type="LabelSettings" id="LabelSettings_ls8qt"]
font = ExtResource("5_p2i0l")
font_size = 8
font_color = Color(0, 0, 0, 1)

[node name="source_link" type="TextureButton"]
offset_left = 18.0
offset_top = 25.0
offset_right = 50.0
offset_bottom = 73.0
texture_normal = ExtResource("1_8260m")
texture_pressed = ExtResource("1_8260m")
texture_hover = ExtResource("2_fyqcd")
stretch_mode = 0
script = ExtResource("3_8s2dh")

[node name="selected_panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.2
anchor_top = 1.025
anchor_right = 1.4
anchor_bottom = 1.325
offset_left = -9.6
offset_top = 0.800003
offset_right = 3.2
offset_bottom = 20.4
theme_override_styles/panel = SubResource("StyleBoxFlat_0knqs")

[node name="TextureRect" type="TextureRect" parent="selected_panel"]
layout_mode = 0
offset_left = 39.0
offset_top = 14.0
offset_right = 58.0
offset_bottom = 31.0
texture = ExtResource("6_t5by5")

[node name="filename" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.99
anchor_right = 1.0
anchor_bottom = 1.34
offset_left = -13.2
offset_top = 4.48
offset_right = 12.0
offset_bottom = 18.68
grow_horizontal = 2
grow_vertical = 2
text = "Source
code"
label_settings = SubResource("LabelSettings_ls8qt")
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="select_audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_8s88s")

[node name="close_audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_i3lby")

[connection signal="pressed" from="." to="." method="_on_pressed"]
